--- a/bower.json
+++ b/bower.json
@@ -6,8 +6,8 @@
     "jquery": "~2.0.3",
     "lodash": "~2.4.1",
     "backbone": "~1.1.2",
-    "foundation": "~5.1.1",
-    "font-awesome": "~4.0.3"
+    "font-awesome": "~4.0.3",
+    "foundation": "git://github.com/syko/foundation.git#master"
   },
   "devDependencies": {},
   "overrides": {
