--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-notify": "~1.0.0-beta",
     "html-entities": "~1.0.10",
     "node-notifier": "~1.2.1",
-    "gulp-preprocess": "~1.0.1"
+    "gulp-preprocess": "~1.0.1",
+    "gulp-shell": "~0.2.4"
   }
 }
