--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "html-entities": "~1.0.10",
     "node-notifier": "~1.2.1",
     "gulp-preprocess": "~1.0.1",
-    "gulp-shell": "~0.2.4"
+    "gulp-shell": "~0.2.4",
+    "gulp-bump": "~0.1.6"
   }
 }
