--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "gulp-preprocess": "~1.0.1",
     "gulp-shell": "~0.2.4",
     "gulp-bump": "~0.1.6",
-    "gulp-tap": "~0.1.1",
-    "gulp-git": "~0.3.5"
+    "gulp-tap": "~0.1.1"
   }
 }
