--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "gulp-preprocess": "~1.0.1",
     "gulp-shell": "~0.2.4",
     "gulp-bump": "~0.1.6",
-    "gulp-tap": "~0.1.1"
+    "gulp-tap": "~0.1.1",
+    "gulp-rev": "~0.3.2",
+    "gulp-inject": "~0.4.1"
   }
 }
