Toggl deployment notifications

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-bump": "~0.1.6",
     "gulp-tap": "~0.1.1",
     "gulp-rev": "~0.3.2",
-    "gulp-inject": "~0.4.1"
+    "gulp-inject": "~0.4.1",
+    "request": "~2.34.0"
   }
 }
