--- a/package.json
+++ b/package.json
@@ -9,35 +9,34 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "gulp": "~3.5.2",
-    "gulp-compass": "~1.1.3",
-    "gulp-coffee": "~1.4.1",
-    "gulp-ngmin": "~0.1.2",
-    "gulp-concat": "~2.1.7",
-    "gulp-watch": "~0.5.0",
-    "gulp-clean": "~0.2.4",
+    "event-stream": "~3.1.0",
+    "gulp": ">=3.6.2",
     "gulp-bower-files": "~0.1.11",
-    "gulp-uglify": "~0.2.1",
-    "gulp-print": "~1.0.3",
-    "gulp-util": "~2.2.14",
-    "gulp-template-compile": "~0.1.0",
+    "gulp-bump": "~0.1.6",
+    "gulp-clean": "~0.2.4",
+    "gulp-coffee": "~1.4.1",
+    "gulp-compass": "~1.1.3",
+    "gulp-concat": "~2.1.7",
     "gulp-filter": "~0.3.0",
     "gulp-flatten": "0.0.2",
-    "gulp-livereload": "~1.2.0",
-    "node-static": "~0.7.3",
-    "event-stream": "~3.1.0",
-    "gulp-sass": "~0.7.1",
+    "gulp-imagemin": "~0.3.0",
+    "gulp-inject": "~0.4.1",
     "gulp-insert": "~0.2.0",
+    "gulp-livereload": "~1.2.0",
     "gulp-notify": "~1.0.0-beta",
+    "gulp-preprocess": "~1.0.1",
+    "gulp-print": "~1.0.3",
+    "gulp-rev": "~0.3.2",
+    "gulp-sass": "~0.7.1",
+    "gulp-shell": "~0.2.4",
+    "gulp-tap": "~0.1.1",
+    "gulp-template-compile": "~0.1.0",
+    "gulp-uglify": "~0.2.1",
+    "gulp-util": "~2.2.14",
+    "gulp-watch": "~0.5.0",
     "html-entities": "~1.0.10",
     "node-notifier": "~1.2.1",
-    "gulp-preprocess": "~1.0.1",
-    "gulp-shell": "~0.2.4",
-    "gulp-bump": "~0.1.6",
-    "gulp-tap": "~0.1.1",
-    "gulp-rev": "~0.3.2",
-    "gulp-inject": "~0.4.1",
-    "request": "~2.34.0",
-    "gulp-imagemin": "~0.2.0"
+    "node-static": "~0.7.3",
+    "request": "~2.34.0"
   }
 }
