Proper compass & sass config + css minifcation

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "html-entities": "~1.0.10",
     "node-notifier": "~1.2.1",
     "node-static": "~0.7.3",
-    "request": "~2.34.0"
+    "request": "~2.34.0",
+    "gulp-minify-css": "~0.3.4"
   }
 }
