--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "node-notifier": "~1.2.1",
     "node-static": "~0.7.3",
     "request": "~2.34.0",
-    "gulp-minify-css": "~0.3.4"
+    "gulp-minify-css": "~0.3.4",
+    "gulp-minify-html": "~0.1.3"
   }
 }
