Added jquery ui position library

--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "momentjs": "~2.5.1",
     "foundation": "foundation#master",
     "iframe-resizer": "~2.4.6",
-    "DatePicker": "https://github.com/soswow/DatePicker.git"
+    "DatePicker": "https://github.com/soswow/DatePicker.git",
+    "jquery-ui": "~1.10.4"
   },
   "devDependencies": {},
   "overrides": {
@@ -41,7 +42,14 @@
       "_comment": "We want to configure foundation and compile manually: use scss instead of css"
     },
     "DatePicker": {
-      "main": ["js/datepicker.js"]
+      "main": [
+        "js/datepicker.js"
+      ]
+    },
+    "jquery-ui": {
+      "main": [
+        "ui/jquery.ui.position.js"
+      ]
     }
   }
 }
