--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "coffee-script": "~1.7.1",
     "event-stream": "~3.1.0",
     "gulp": ">=3.6.2",
     "gulp-bower-files": "~0.1.11",
