--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
     "backbone": "~1.1.2",
     "font-awesome": "~4.0.3",
     "momentjs": "~2.5.1",
-    "foundation": "foundation#master",
+    "foundation": "~5.2.3",
     "iframe-resizer": "~2.4.6",
     "DatePicker": "https://github.com/soswow/DatePicker.git",
     "jquery-ui": "~1.10.4"
