--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "coffee-script": "~1.7.1",
+    "coffee-script": "1.7.0",
     "event-stream": "~3.1.0",
     "gulp": ">=3.6.2",
     "gulp-bower-files": "~0.1.11",
