--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "devDependencies": {
     "coffee-script": "1.7.0",
     "event-stream": "~3.1.0",
-    "gulp": ">=3.6.2",
+    "bower": "1.8.8",
+    "gulp": "3.6.2",
     "gulp-bower-files": "~0.1.11",
     "gulp-bump": "~0.1.6",
     "gulp-clean": "~0.2.4",
